Closed
Bug 1221551
Opened 10 years ago
Closed 10 years ago
crash in mozilla::a11y::ProxyAccessible::Shutdown
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla45
| Tracking | Status | |
|---|---|---|
| firefox45 | --- | fixed |
People
(Reporter: davidb, Assigned: tbsaunde)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
2.05 KB,
patch
|
davidb
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-7b847c7c-e403-40c0-b7fa-77eaa2151031.
=============================================================
Crashing here: MOZ_CRASH("outer doc doesn't own adoc!");
I thought we had a bug filed for this but can't find it...
More here: https://crash-stats.mozilla.com/report/list?product=Firefox&signature=mozilla%3A%3Aa11y%3A%3AProxyAccessible%3A%3AShutdown
| Assignee | ||
Comment 1•10 years ago
|
||
It seems possible that a child document could be bound to a parent document
without first being unbound. Some evidence for this being possible is that
OuterDocAccessible::InsertChildAt() explicitly checks for this and does
something similar if it already has a child.
Attachment #8684395 -
Flags: review?(dbolter)
| Reporter | ||
Updated•10 years ago
|
Attachment #8684395 -
Flags: review?(dbolter) → review+
Comment 3•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox45:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Comment 4•10 years ago
|
||
FYI, going into about:crashes and seeing 'related bugs', this bug popped up when Firefox just crashed on me today (Nov 16) using the latest build (b45 Nov 15).
I was on the google drive page, created a folder, and when I double-clicked the newly-created folder, that's when Firefox closed down.
Crash ID https://crash-stats.mozilla.com/report/index/c129f60c-4cdd-4f9c-88d9-a58892151116
| Reporter | ||
Updated•9 years ago
|
Assignee: nobody → tbsaunde+mozbugs
You need to log in
before you can comment on or make changes to this bug.
Description
•